--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,10 @@
 name: gh-pages
 
 on:
-  push:
-    branches: ['main']
+  workflow_run:
+    workflows: [Playwright Tests]
+    types:
+      - completed
 
 jobs:
   build:
