--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview",
     "test": "playwright test",
     "testui": "playwright test --ui",
-    "report": "playwright show-report",
-    "codegen": "playwright codegen http://localhost:5173/pomodoro/"
+    "report": "playwright show-report"
   },
   "dependencies": {
     "prettier": "^3.3.3",
