--- a/.prettierrc
+++ b/.prettierrc
@@ -1,21 +1,12 @@
 {
   "arrowParens": "always",
   "bracketSpacing": true,
-  "endOfLine": "crlf",
-  "htmlWhitespaceSensitivity": "css",
-  "insertPragma": false,
-  "singleAttributePerLine": false,
   "bracketSameLine": false,
   "jsxSingleQuote": true,
   "printWidth": 80,
-  "proseWrap": "preserve",
-  "quoteProps": "as-needed",
-  "requirePragma": false,
   "semi": true,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "all",
-  "useTabs": false,
-  "embeddedLanguageFormatting": "auto",
-  "experimentalTernaries": false
+  "trailingComma": "none",
+  "embeddedLanguageFormatting": "auto"
 }
